@@ -1,0 +1,105 @@
+<?xml version="1.01" encoding="UTF-8"?><!DOCTYPE language>
+<language name="C" extensions="*.cpp;*.cc;*.C;*.h" mimetype="text/x-c++-src;text/x-c++-hdr;text/x-c-hdr;text/x-c++-src" casesensitive="1">
+  <highlighting>
+    <keywords>
+      <keyword> break </keyword>
+      <keyword> case </keyword>
+      <keyword> continue </keyword>
+      <keyword> default </keyword>
+      <keyword> do </keyword>
+      <keyword> else </keyword>
+      <keyword> enum </keyword>
+      <keyword> extern </keyword>
+      <keyword> for </keyword>
+      <keyword> goto </keyword>
+      <keyword> if </keyword>
+      <keyword> return </keyword>
+      <keyword> sizeof </keyword>
+      <keyword> struct </keyword>
+      <keyword> switch </keyword>
+      <keyword> typedef </keyword>
+      <keyword> union </keyword>
+      <keyword> while </keyword>
+    </keywords>
+    <types>
+      <type> auto </type>
+      <type> char </type>
+      <type> const </type>
+      <type> double </type>
+      <type> float </type>
+      <type> int </type>
+      <type> long </type>
+      <type> register </type>
+      <type> short </type>
+      <type> signed </type>
+      <type> static </type>
+      <type> unsigned </type>
+      <type> void </type>
+      <type> volatile </type>
+    </types>
+    <contexts>
+      <context attribute="0" lineEndContext="0">
+        <item name="keyword" attribute="1" context="0"/>
+        <item name="dataType" attribute="2" context="0"/>
+        <item name="Float" attribute="6" context="0">
+          <item name="AnyChar" String="fF" attribute="6" context="0"/>
+        </item>
+        <item name="HlCOct" attribute="4" context="0"/>
+        <item name="HlCHex" attribute="5" context="0"/>
+        <item name="Int" attribute="3" context="0" >
+          <item name="StringDetect" attribute="3" context="0" String="ULL" insensitive="TRUE"/>
+          <item name="StringDetect" attribute="3" context="0" String="LUL" insensitive="TRUE"/>
+          <item name="StringDetect" attribute="3" context="0" String="LLU" insensitive="TRUE"/>
+          <item name="StringDetect" attribute="3" context="0" String="UL" insensitive="TRUE"/>
+          <item name="StringDetect" attribute="3" context="0" String="LU" insensitive="TRUE"/>
+          <item name="StringDetect" attribute="3" context="0" String="LL" insensitive="TRUE"/>
+          <item name="StringDetect" attribute="3" context="0" String="U" insensitive="TRUE"/>
+          <item name="StringDetect" attribute="3" context="0" String="L" insensitive="TRUE"/>
+        </item>
+        <item name="HlCChar" attribute="7" context="0"/>
+        <item name="CharDetect" attribute="8" context="1" char="&quot;"/>
+        <item name="2CharDetect" attribute="10" context="2" char="/" char1="/"/>
+        <item name="2CharDetect" attribute="10" context="3" char="/" char1="*"/>
+        <item name="AnyChar" attribute="11" context="0" String="!%&amp;()+,-&lt;=&gt;?[]^{|}~"/>
+        <item name="RegExpr" attribute="12" context="4" String="^#"/>
+      </context>
+      <context attribute="8" lineEndContext="0">
+        <item name="LineContinue" attribute="8" context="6"/>
+        <item name="HlCStringChar" attribute="9" context="1"/>
+        <item name="CharDetect" attribute="8" context="0" char="&quot;"/>
+      </context>
+      <context attribute="10" lineEndContext="0"/>
+      <context attribute="10" lineEndContext="3">
+        <item name="2CharDetect" attribute="10" context="0" char="*" char1="/"/>
+      </context>
+      <context attribute="12" lineEndContext="0">
+        <item name="LineContinue" attribute="12" context="7"/>
+        <item name="RangeDetect" attribute="13" context="4" char="&quot;" char1="&quot;"/>
+        <item name="RangeDetect" attribute="13" context="4" char="&lt;" char1="&gt;"/>
+        <item name="2CharDetect" attribute="10" context="2" char="/" char1="/"/>
+        <item name="2CharDetect" attribute="10" context="5" char="/" char1="*"/>
+      </context>
+      <context attribute="10" lineEndContext="5">
+        <item name="2CharDetect" attribute="10" context="4" char="*" char1="/" />
+      </context>
+      <context attribute="0" lineEndContext="1" />
+      <context attribute="0" lineEndContext="4" />
+    </contexts>
+    <itemDatas>
+      <itemData name="Normal Text" defStyleNum="dsNormal"/>
+      <itemData name="Keyword"  defStyleNum="dsKeyword"/>
+      <itemData name="Data Type"  defStyleNum="dsDataType"/>
+      <itemData name="Decimal"  defStyleNum="dsDecVal"/>
+      <itemData name="Octal"  defStyleNum="dsBaseN"/>
+      <itemData name="Hex"  defStyleNum="dsBaseN"/>
+      <itemData name="Float"  defStyleNum="dsFloat"/>
+      <itemData name="Char"  defStyleNum="dsChar"/>
+      <itemData name="String"  defStyleNum="dsString"/>
+      <itemData name="String Char"  defStyleNum="dsChar"/>
+      <itemData name="Comment"  defStyleNum="dsComment"/>
+      <itemData name="Symbol"  defStyleNum="dsNormal"/>
+      <itemData name="Preprocessor"  defStyleNum="dsOthers"/>
+      <itemData name="Prep. Lib"  defStyleNum="dsOthers"/> <!--,Qt::darkYellow,Qt::yellow,false,false)); -->
+    </itemDatas>
+  </highlighting>
+</language>
