@@ -1,0 +1,41 @@
+<?xml version="1.01" encoding="UTF-8"?><!DOCTYPE language>
+<language name="HTML" extensions="*.html;*.htm;*.docbook;*.xml;*.sgml" mimetype="text/html;text/sgml;text/xml;text/book" casesensitive="0">
+  <highlighting>
+    <keywords>
+    </keywords>
+    <types>
+    </types>
+    <contexts>
+       <context attribute="0" lineEndContext="0">
+         <item name="RegExpr" attribute="1" context="1" String="&lt;\s*\/?\s*[a-zA-Z0-9_]*" />
+       </context>
+
+       <context attribute="2" lineEndContext="1">
+         <item name="CharDetect" attribute="1" context="0" char="&gt;"/>
+         <item name="RegExpr" attribute="0" context="2" String="\s*=\s*"/>
+       </context>
+
+       <context attribute="8" lineEndContext="2">
+         <item name="RegExpr" attribute="3" context="1" String="\s*#?[a-zA-Z0-9]*" />
+         <item name="CharDetect" attribute="3" context="3" char="&quot;" />
+       </context>
+
+       <context attribute="3" lineEndContext="3">
+         <item name="CharDetect" attribute="3" context="1" char="&quot;" />
+       </context>
+
+       <context attribute="5" lineEndContext="0"/>
+       <context attribute="4" lineEditContext="0">
+         <item name="CharDetect" attribute="4" context="0" char="'"/>
+       </context>
+    </contexts>
+    <itemDatas>
+      <itemData name="Normal Text" defStyleNum="dsNormal"/>
+      <itemData name="Keyword" defStyleNum="dsKeyword"/>
+      <itemData name="Identifier" defStyleNum="dsOthers"/>
+      <itemData name="Types" defStyleNum="dsDataType"/>
+      <itemData name="String" defStyleNum="dsString"/>
+      <itemData name="Comment" defStyleNum="dsComment"/>
+    </itemDatas>
+  </highlighting>
+</language>
